2011-04-22  Bernhard Walle <bernhard@bwalle.de>

	* Move logging (both debug log and error log) in own subdirectory.
	* Add Doxygen group 'log'.

2011-04-18  Bernhard Walle <bernhard@bwalle.de>

	* Add error logging.

2011-04-17  Bernhard Walle <bernhard@bwalle.de>

	* Fix include path when using in an project.

2011-04-17  Bernhard Walle <bernhard@bwalle.de>

	* Add CMake build open 'BUILD_EXAMPLES' that allows to build the
	  library only.
	* Add SerialFile::readLine() method.
	* Use the SerialFile::readLine() method in the example.
	* SerialFile: Don't return empty strings for each line.
	* SerialFile: Disable translation of \r to \n.

2011-03-06  Bernhard Walle <bernhard@bwalle.de>

	* Don't try to link against libcurses when libreadline has not been
	  found.
	* Change completion interface from ssize_t to int since Win32 has no
	  ssize_t.
	* Add compatibility strcasecmp() for Win32.
	* Only include "unistd.h" if we have it.
	* CMakeLists.txt: Switch to cmakedefine.

2011-03-05  Bernhard Walle <bernhard@bwalle.de>

	* Fix warning in serialfile_linux.cc.
	* Fix build on Linux.
	* Fix cmake library search on Mac OS.

2011-02-27  Bernhard Walle <bernhard@bwalle.de>

	* Locking serial port works different on Linux and Mac OS.
	* Move serial file into own subdirectory and namespace 'io'.
	* Add Noncopyable.
	* Add thread class.

2011-02-26  Bernhard Walle <bernhard@bwalle.de>

	* Fix build on Mac OS X.

2010-12-05  Bernhard Walle <bernhard@bwalle.de>

	* Add daemonize().

2010-11-28  Bernhard Walle <bernhard@bwalle.de>

	* Fix undocumented stuff.
	* Fix compiler warnings.
	* Add SerialFile class to access a serial console.
	* Add example program 'serialread'.
	* Add replace_char() function in stringutil.h.
	* Add OptionParser.
	* Fix build on Mac OS.
	* Add target_link_libraries() for the extra libraries.

2010-11-27  Bernhard Walle <bernhard@bwalle.de>

	* Doxygen fixes.
	* Move everything into 'bw' namespace.
	* Use "git describe" to build the version hash.